--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,10 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Liuting/Projects/evercam.networkdiscovery/lib/evercam-java-1.0-withDependency-ShadedForAndroid.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Liuting/Projects/evercam.networkdiscovery/lib/upnplib-mobile.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Liuting/Projects/evercam.networkdiscovery/lib/apache-httpcomponents-httpcore.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Liuting/Projects/evercam.networkdiscovery/lib/httpclient-4.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Liuting/Projects/evercam.networkdiscovery/lib/commons-logging-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/apache-httpcomponents-httpcore.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/evercam-java-1.0-withDependency-ShadedForAndroid.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/upnplib-mobile.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
